deploy/overlays/stg/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: europe-west2-docker.pkg.dev/portfolio-463406/docker-repository/queue_backend
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: gcp-pull-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valkey
  labels:
    app: valkey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: valkey
  template:
    metadata:
      labels:
        app: valkey
    spec:
      containers:
        - name: valkey
          image: valkey/valkey:8.1.3
          ports:
            - containerPort: 6379
