deploy/overlays/stg/service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service
  labels:
    app: service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service
  template:
    metadata:
      labels:
        app: service
    spec:
      containers:
        - name: service
          image: europe-west2-docker.pkg.dev/portfolio-463406/docker-repository/queue_service
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: gcp-pull-secret
