deploy/overlays/stg/gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  selector:
    app: gateway
  ports:
    - name: gateway
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: europe-west2-docker.pkg.dev/portfolio-463406/docker-repository/queue_gateway
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: gcp-pull-secret
