deploy/overlays/stg/mcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: mcp
  labels:
    app: mcp
spec:
  selector:
    app: mcp
  ports:
    - name: mcp
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcp
  labels:
    app: mcp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mcp
  template:
    metadata:
      labels:
        app: mcp
      annotations:
        instrumentation.opentelemetry.io/inject-python: "observability/otel-operator"
    spec:
      containers:
        - name: mcp
          image: europe-west2-docker.pkg.dev/portfolio-463406/docker-repository/queue_mcp
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: gcp-pull-secret
