deploy/overlays/stg/ui.yaml
apiVersion: v1
kind: Service
metadata:
    name: ui
spec:
    selector:
        app: ui
    ports:
        - port: 80
          targetPort: 80
          protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  labels:
    app: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - name: ui
          image: europe-west2-docker.pkg.dev/portfolio-463406/docker-repository/queue_ui
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: gcp-pull-secret
